--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="image/jpg" href="https://e7.pngegg.com/pngimages/268/27/png-clipart-action-item-computer-icons-task-others-miscellaneous-angle-thumbnail.png"/>
 
-    <title>Document</title>
+    <title>✍🏻 To Do List ✍🏻</title>
   </head>
   <body>
     <div class="container">
